group and link editors

--- a/src/index.pug
+++ b/src/index.pug
@@ -27,7 +27,7 @@ html
             include scripts/test.js
         script(id="editor/card-editor.js")
             include scripts/editor/card-editor.js
-        script(id="editor/cardsty;e-editor.js")
+        script(id="editor/cardstyle-editor.js")
             include scripts/editor/cardstyle-editor.js
         script(id="editor/editor.js")
             include scripts/editor/editor.js
