--- a/src/pugs/board-editor.pug
+++ b/src/pugs/board-editor.pug
@@ -1,9 +1,4 @@
-.sidebar-header
-    .button-column
-        button(data-action="project/import" title="import from previous export") 📂 import from html
-        button(data-action="project/export/html" title="export to standalone webpage") 📦 export to html
-        button(data-action="project/publish/neocities" title="export html directly to neocities website") 😻 publish to neocities
-        button(data-action="project/clear-cards" title="delete all cards from the board") ❌ remove all cards
+.sidebar-header browser saves disabled for now
 .sidebar-panel
     h2 title
     .button-row
@@ -11,3 +6,9 @@
     h2 background color
     .button-row
         input(type="color" data-path="global-editor/style/background-color")
+    h2 publish
+    .button-column
+        button(data-action="project/import" title="import from previous export") 📂 import from html
+        button(data-action="project/export/html" title="export to standalone webpage") 📦 export to html
+        button(data-action="project/publish/neocities" title="export html directly to neocities website") 😻 publish to neocities
+        button(data-action="project/clear-cards" title="delete all cards from the board") ❌ remove all cards
