--- a/src/pugs/link-editor.pug
+++ b/src/pugs/link-editor.pug
@@ -2,6 +2,8 @@
     div(data-path="link/prompt") 1 link selected
     .button-row
         button(data-action="link/deselect") deselect
-        button(data-action="link/recolor") recolor
         button(data-action="link/select") select cards
-        button(data-action="link/delete") ungroup
+        button(data-action="link/delete") unlink
+.sidebar-panel
+    h2 color
+    input(type="color" data-path="link/color")
