--- a/src/pugs/group-editor.pug
+++ b/src/pugs/group-editor.pug
@@ -2,6 +2,8 @@
     div(data-path="group/prompt") 1 group selected
     .button-row
         button(data-action="group/deselect") deselect
-        button(data-action="group/recolor") recolor
         button(data-action="group/select") select cards
         button(data-action="group/delete") ungroup
+.sidebar-panel
+    h2 color
+    input(type="color" data-path="group/color")
