--- a/src/pugs/global-editor.pug
+++ b/src/pugs/global-editor.pug
@@ -1,4 +1,4 @@
-#left-sidebar(data-block-clicks data-path="global-editor")
+#left-sidebar(data-block-clicks data-path="global-editor" hidden)
     .tab-bar
         button(data-action="global-editor/close") ◀
         //button(data-tab-toggle="sidebar/about" data-tab-default) about
