--- a/src/index.pug
+++ b/src/index.pug
@@ -40,11 +40,12 @@ html
             #scene
                 #svgs(data-empty)
                 #cards(data-empty)
+        #sidebar-toggle.toolbar-group.icon-bar
+            .icon(data-action="global-editor/toggle" title="board settings") 🔨
         #toolbar(data-block-clicks)
             .toolbar-group.icon-bar
                 //.icon.disabled(data-action="global/undo" title="undo") ↩
-                //.icon.disabled(data-action="global/redo" title="redo") ↪                
-                .icon#open-about(data-action="global-editor/toggle" title="board settings") 🔨
+                //.icon.disabled(data-action="global/redo" title="redo") ↪
                 //.icon(data-action="project/save" title="save in browser") 💾
 
             .toolbar-group.icon-bar(data-path="picker" hidden)
