--- a/src/pugs/board-editor.pug
+++ b/src/pugs/board-editor.pug
@@ -6,9 +6,12 @@
     h2 background color
     .button-row
         input(type="color" data-path="global-editor/style/background-color")
-    h2 publish
+    h2 overwrite
     .button-column
         button(data-action="project/import" title="import from previous export") 📂 import from html
+        button(data-action="project/clear-cards" title="delete all cards from the board") ❌ remove all cards
+    h2 publish
+    .button-column
         button(data-action="project/export/html" title="export to standalone webpage") 📦 export to html
         button(data-action="project/publish/neocities" title="export html directly to neocities website") 😻 publish to neocities
-        button(data-action="project/clear-cards" title="delete all cards from the board") ❌ remove all cards
+        button#neocities-view(data-action="project/publish/neocities/view" title="view exported neocities page" disabled) 👀 view on neocities
