--- a/src/index.pug
+++ b/src/index.pug
@@ -57,6 +57,6 @@ html
         script loadData();
         script#project-data-deferred(type="text/json")
             include project-data-deferred.json
-        script#font(type="text/css")
+        script#font(type="text/css" data-font-family="Lora")
             include font.css
         script loadDataDeferred();
