--- a/src/index.pug
+++ b/src/index.pug
@@ -41,6 +41,7 @@ html
                 #cards(data-empty)
         #sidebar-toggle.toolbar-group.icon-bar
             .icon(data-action="global-editor/toggle" title="board settings") 🔨
+            .icon(data-action="global/view-saves" title="view saved boards") 📂
         #toolbar(data-block-clicks)
             .toolbar-group.icon-bar
                 #undo.icon.disabled(data-action="global/undo" title="undo") ↩
