button to preview centered cards

--- a/src/pugs/board-editor.pug
+++ b/src/pugs/board-editor.pug
@@ -20,6 +20,7 @@
     p copy the id of a card selection and paste it here to set where the viewer starts in the board
     .button-row
         input(type="text" data-path="global-editor/focus")
+        button.shrink(data-action="global/center-focus") 🔍
     h2 background color
     .button-row
         input(type="color" data-path="global-editor/style/background-color")
